--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -5,7 +5,7 @@
 
     <h1>Home</h1>
 
-    <p class="lead">This is the home page.</p>
+    <p class="lead">Glad you found our home page! </p>
 
     <p>Here is some more info!</p>
 
