--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -7,6 +7,6 @@
 
     <p class="lead">Glad you found our home page! </p>
 
-    <p>Here is some more info!</p>
+    <p>Hope you find the right product for you!</p>
 
 {% endblock %}
